Fix hero text size and spacing on small screens

--- a/app/assets/stylesheets/revised/pages/landing/_home.scss
+++ b/app/assets/stylesheets/revised/pages/landing/_home.scss
@@ -347,9 +347,15 @@
 }
 
 // Prevent overflow on tiny screens
-@media (max-width: 350px) {
-  .root-landing-banner-header .root-landing-header-text h1 {
-    font-size: 35px;
+@media (max-width: $grid-breakpoint-md) {
+  .root-landing-banner-header .root-landing-header-text {
+    h1 {
+      font-size: 2.3rem;
+    }
+
+    h2 {
+      line-height: 35px;
+    }
   }
 }
 
